overflow issue fixed

--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@ dialog::backdrop {
   background-color: rgba(0, 0, 0, 0.659);
 }
 
-body{
+body {
   margin: 0;
   height: 100vh;
   width: 100vw;
@@ -34,8 +34,6 @@ body{
   justify-content: center;
   backdrop-filter: blur(12px);
 }
-
-
 
 p {
   margin-inline: 10px;
@@ -66,8 +64,6 @@ p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.3rem;
 }
-
-
 
 /* CSS */
 button,
@@ -111,6 +107,10 @@ button:active {
 }
 
 @media only screen and (hover: none) and (pointer: coarse) {
+  *{
+    overflow: hidden;
+  }
+  
   html {
     background-position: bottom;
     background-image: url(assets/portrait.png),
